--- a/1.2/Languages/English/Keyed/FarmingHysteresis.xml
+++ b/1.2/Languages/English/Keyed/FarmingHysteresis.xml
@@ -5,14 +5,14 @@
   <FarmingHysteresis.EnableFarmingHysteresisisDesc>Start planting when the configured amount gets lower than the configured lower amount and stop when it gets above the configured upper amount.</FarmingHysteresis.EnableFarmingHysteresisisDesc>
 
   <FarmingHysteresis.DecrementLowerHysteresis>L: -{0}</FarmingHysteresis.DecrementLowerHysteresis>
-  <FarmingHysteresis.DecrementLowerHysteresisDesc>Decrement the lower bound by {0}</FarmingHysteresis.DecrementLowerHysteresisDesc>
+  <FarmingHysteresis.DecrementLowerHysteresisDesc>Decrement the lower bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.DecrementLowerHysteresisDesc>
   <FarmingHysteresis.IncrementLowerHysteresis>L: +{0}</FarmingHysteresis.IncrementLowerHysteresis>
-  <FarmingHysteresis.IncrementLowerHysteresisDesc>Increment the lower bound by {0}</FarmingHysteresis.IncrementLowerHysteresisDesc>
+  <FarmingHysteresis.IncrementLowerHysteresisDesc>Increment the lower bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.IncrementLowerHysteresisDesc>
   
   <FarmingHysteresis.DecrementUpperHysteresis>U: -{0}</FarmingHysteresis.DecrementUpperHysteresis>
-  <FarmingHysteresis.DecrementUpperHysteresisDesc>Decrement the upper bound by {0}</FarmingHysteresis.DecrementUpperHysteresisDesc>
+  <FarmingHysteresis.DecrementUpperHysteresisDesc>Decrement the upper bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.DecrementUpperHysteresisDesc>
   <FarmingHysteresis.IncrementUpperHysteresis>U: +{0}</FarmingHysteresis.IncrementUpperHysteresis>
-  <FarmingHysteresis.IncrementUpperHysteresisDesc>Increment the upper bound by {0}</FarmingHysteresis.IncrementUpperHysteresisDesc>
+  <FarmingHysteresis.IncrementUpperHysteresisDesc>Increment the upper bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.IncrementUpperHysteresisDesc>
 
   <FarmingHysteresis.LowerBound>Start planting {0} when there are fewer than {1} {2} in storage</FarmingHysteresis.LowerBound>
   <FarmingHysteresis.UpperBound>Stop planting {0} when there are more than {1} {2} in storage</FarmingHysteresis.UpperBound>
@@ -24,5 +24,5 @@
   <FarmingHysteresis.LatchModeDesc.AboveLowerBoundEnabled>Higher than the lower bound, but has not reached the upper bound. Sowing still enabled.</FarmingHysteresis.LatchModeDesc.AboveLowerBoundEnabled>
   <FarmingHysteresis.LatchModeDesc.AboveLowerBoundDisabled>Lower than the upper bound, but has not reached the lower bound. Sowing still disabled.</FarmingHysteresis.LatchModeDesc.AboveLowerBoundDisabled>
   <FarmingHysteresis.LatchModeDesc.AboveUpperBound>Higher than the upper bound. Sowing disabled.</FarmingHysteresis.LatchModeDesc.AboveUpperBound>
-  <FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>Farming hysteresis is disabled for this growing zone due to the selected plant not having a harvestable product</FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>
+  <FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>Farming hysteresis is disabled for this growing zone due to the selected plant not having a harvestable product.</FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>
 </LanguageData>
