Update Japanese Translation Rev2
Substituted {1} and {2} correctly.

--- a/1.2/Languages/Japanese/Keyed/FarmingHysteresis.xml
+++ b/1.2/Languages/Japanese/Keyed/FarmingHysteresis.xml
@@ -5,14 +5,14 @@
   <FarmingHysteresis.EnableFarmingHysteresisisDesc>設定された下限値を在庫が下回った場合に種蒔きを開始して,設定された上限値を在庫が超えた場合に種蒔きを停止します.</FarmingHysteresis.EnableFarmingHysteresisisDesc>
 
   <FarmingHysteresis.DecrementLowerHysteresis>下限：-{0}</FarmingHysteresis.DecrementLowerHysteresis>
-  <FarmingHysteresis.DecrementLowerHysteresisDesc>下限値を{0}下げます.\nCtrlキー押すと{1}は+10,\nShiftキーを押すと{2}は+100に変更</FarmingHysteresis.DecrementLowerHysteresisDesc>
+  <FarmingHysteresis.DecrementLowerHysteresisDesc>下限値を{0}下げます.\n{1}キーを押すと+10,\n{2}キーを押すと+100に変更</FarmingHysteresis.DecrementLowerHysteresisDesc>
   <FarmingHysteresis.IncrementLowerHysteresis>下限：+{0}</FarmingHysteresis.IncrementLowerHysteresis>
-  <FarmingHysteresis.IncrementLowerHysteresisDesc>下限値を{0}上げます.\nCtrlキー押すと{1}は+10,\nShiftキーを押すと{2}は+100に変更</FarmingHysteresis.IncrementLowerHysteresisDesc>
+  <FarmingHysteresis.IncrementLowerHysteresisDesc>下限値を{0}上げます.\n{1}キーを押すと+10,\n{2}キーを押すと+100に変更</FarmingHysteresis.IncrementLowerHysteresisDesc>
 
   <FarmingHysteresis.DecrementUpperHysteresis>上限：-{0}</FarmingHysteresis.DecrementUpperHysteresis>
-  <FarmingHysteresis.DecrementUpperHysteresisDesc>上限値を{0}下げます.\nCtrlキー押すと{1}は+10,\nShiftキーを押すと{2}は+100に変更</FarmingHysteresis.DecrementUpperHysteresisDesc>
+  <FarmingHysteresis.DecrementUpperHysteresisDesc>上限値を{0}下げます.\n{1}キーを押すと+10,\n{2}キーを押すと+100に変更</FarmingHysteresis.DecrementUpperHysteresisDesc>
   <FarmingHysteresis.IncrementUpperHysteresis>上限：+{0}</FarmingHysteresis.IncrementUpperHysteresis>
-  <FarmingHysteresis.IncrementUpperHysteresisDesc>上限値を{0}上げます.\nCtrlキー押すと{1}は+10,\nShiftキーを押すと{2}は+100に変更</FarmingHysteresis.IncrementUpperHysteresisDesc>
+  <FarmingHysteresis.IncrementUpperHysteresisDesc>上限値を{0}上げます.\n{1}キーを押すと+10,\n{2}キーを押すと+100に変更</FarmingHysteresis.IncrementUpperHysteresisDesc>
 
   <FarmingHysteresis.LowerBound>下限:{2}が{1}未満の場合,\n　　 {0}の種蒔きを開始</FarmingHysteresis.LowerBound>
   <FarmingHysteresis.UpperBound>上限:{2}が{1}以上の場合,\n　　 {0}の種蒔きを停止</FarmingHysteresis.UpperBound>
