--- a/1.2/Languages/Japanese/Keyed/FarmingHysteresis.xml
+++ b/1.2/Languages/Japanese/Keyed/FarmingHysteresis.xml
@@ -25,8 +25,8 @@
   <FarmingHysteresis.LatchModeDesc>現状:{0}</FarmingHysteresis.LatchModeDesc>
   <FarmingHysteresis.LatchModeDesc.Unknown>不明.これはバグです.</FarmingHysteresis.LatchModeDesc.Unknown>
   <FarmingHysteresis.LatchModeDesc.BelowLowerBound>在庫が下限未満.種蒔き可能</FarmingHysteresis.LatchModeDesc.BelowLowerBound>
-  <FarmingHysteresis.LatchModeDesc.AboveLowerBoundEnabled>在庫が下限以上になり,上限未満.種蒔き可能</FarmingHysteresis.LatchModeDesc.AboveLowerBoundEnabled>
-  <FarmingHysteresis.LatchModeDesc.AboveLowerBoundDisabled>在庫が上限以上になった為,現在の在庫が\n　　 下限未満になるまで消費されるまで,種蒔き不可</FarmingHysteresis.LatchModeDesc.AboveLowerBoundDisabled>
+  <FarmingHysteresis.LatchModeDesc.BetweenBoundsEnabled>在庫が下限以上になり,上限未満.種蒔き可能</FarmingHysteresis.LatchModeDesc.BetweenBoundsEnabled>
+  <FarmingHysteresis.LatchModeDesc.BetweenBoundsDisabled>在庫が上限以上になった為,現在の在庫が\n　　 下限未満になるまで消費されるまで,種蒔き不可</FarmingHysteresis.LatchModeDesc.BetweenBoundsDisabled>
   <FarmingHysteresis.LatchModeDesc.AboveUpperBound>在庫が上限以上になり.種蒔き不可</FarmingHysteresis.LatchModeDesc.AboveUpperBound>
   <FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>選択した植物に収穫可能な作物が存在しないので,この栽培ゾーンでは在庫対応が無効になっています</FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>
 
