--- a/1.2/Languages/English/Keyed/FarmingHysteresis.xml
+++ b/1.2/Languages/English/Keyed/FarmingHysteresis.xml
@@ -7,6 +7,9 @@
   <FarmingHysteresis.UseGlobalValues>Use global hysteresis values</FarmingHysteresis.UseGlobalValues>
   <FarmingHysteresis.UseGlobalValuesDesc>For all zones of the same crop with this setting enabled, they will share the same bound values.</FarmingHysteresis.UseGlobalValuesDesc>
 
+  <FarmingHysteresis.DefaultLowerBound>Default lower bound</FarmingHysteresis.DefaultLowerBound>
+  <FarmingHysteresis.DefaultUpperBound>Default upper bound</FarmingHysteresis.DefaultUpperBound>
+
   <FarmingHysteresis.DecrementLowerHysteresis>L: -{0}</FarmingHysteresis.DecrementLowerHysteresis>
   <FarmingHysteresis.DecrementLowerHysteresisDesc>Decrement the lower bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.DecrementLowerHysteresisDesc>
   <FarmingHysteresis.IncrementLowerHysteresis>L: +{0}</FarmingHysteresis.IncrementLowerHysteresis>
