--- a/1.4/Languages/English/Keyed/FarmingHysteresis.xml
+++ b/1.4/Languages/English/Keyed/FarmingHysteresis.xml
@@ -1,43 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LanguageData>
-  <FarmingHysteresis.EnableFarmingHysteresis>Enable farming hysteresis</FarmingHysteresis.EnableFarmingHysteresis>
-  <FarmingHysteresis.EnableFarmingHysteresisisDesc>Start planting when the configured amount gets lower than the configured lower amount and stop when it gets above the configured upper amount.</FarmingHysteresis.EnableFarmingHysteresisisDesc>
+    <FarmingHysteresis.EnableFarmingHysteresis>Enable farming hysteresis</FarmingHysteresis.EnableFarmingHysteresis>
+    <FarmingHysteresis.EnableFarmingHysteresisisDesc>Allow {0} when the amount gets lower than the configured lower amount and disallow {0} when it gets above the configured upper amount.</FarmingHysteresis.EnableFarmingHysteresisisDesc>
 
-  <FarmingHysteresis.UseGlobalValues>Use global hysteresis values</FarmingHysteresis.UseGlobalValues>
-  <FarmingHysteresis.UseGlobalValuesDesc>For all zones and hydroponics basins of the same crop with this setting enabled, they will share the same bound values.</FarmingHysteresis.UseGlobalValuesDesc>
+    <FarmingHysteresis.UseGlobalValues>Use global hysteresis values</FarmingHysteresis.UseGlobalValues>
+    <FarmingHysteresis.UseGlobalValuesDesc>For all zones and hydroponics basins of the same crop with this setting enabled, they will share the same bound values.</FarmingHysteresis.UseGlobalValuesDesc>
 
-  <FarmingHysteresis.DefaultLowerBound>Default lower bound</FarmingHysteresis.DefaultLowerBound>
-  <FarmingHysteresis.DefaultUpperBound>Default upper bound</FarmingHysteresis.DefaultUpperBound>
-  <FarmingHysteresis.EnabledByDefault>Growing zones and hydroponic basins enable hysteresis upon placement</FarmingHysteresis.EnabledByDefault>
-  <FarmingHysteresis.UseGlobalValuesByDefault>Use global hysteresis values by default</FarmingHysteresis.UseGlobalValuesByDefault>
+    <FarmingHysteresis.DefaultLowerBound>Default lower bound</FarmingHysteresis.DefaultLowerBound>
+    <FarmingHysteresis.DefaultUpperBound>Default upper bound</FarmingHysteresis.DefaultUpperBound>
+    <FarmingHysteresis.EnabledByDefault>Growing zones and hydroponic basins enable hysteresis upon placement</FarmingHysteresis.EnabledByDefault>
+    <FarmingHysteresis.UseGlobalValuesByDefault>Use global hysteresis values by default</FarmingHysteresis.UseGlobalValuesByDefault>
+    <FarmingHysteresis.HysteresisMode>Hysteresis mode</FarmingHysteresis.HysteresisMode>
 
-  <FarmingHysteresis.DecrementLowerHysteresis>L: -{0}</FarmingHysteresis.DecrementLowerHysteresis>
-  <FarmingHysteresis.DecrementLowerHysteresisDesc>Decrement the lower bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.DecrementLowerHysteresisDesc>
-  <FarmingHysteresis.IncrementLowerHysteresis>L: +{0}</FarmingHysteresis.IncrementLowerHysteresis>
-  <FarmingHysteresis.IncrementLowerHysteresisDesc>Increment the lower bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.IncrementLowerHysteresisDesc>
-  
-  <FarmingHysteresis.DecrementUpperHysteresis>U: -{0}</FarmingHysteresis.DecrementUpperHysteresis>
-  <FarmingHysteresis.DecrementUpperHysteresisDesc>Decrement the upper bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.DecrementUpperHysteresisDesc>
-  <FarmingHysteresis.IncrementUpperHysteresis>U: +{0}</FarmingHysteresis.IncrementUpperHysteresis>
-  <FarmingHysteresis.IncrementUpperHysteresisDesc>Increment the upper bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.IncrementUpperHysteresisDesc>
+    <FarmingHysteresis.DecrementLowerHysteresis>L: -{0}</FarmingHysteresis.DecrementLowerHysteresis>
+    <FarmingHysteresis.DecrementLowerHysteresisDesc>Decrement the lower bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.DecrementLowerHysteresisDesc>
+    <FarmingHysteresis.IncrementLowerHysteresis>L: +{0}</FarmingHysteresis.IncrementLowerHysteresis>
+    <FarmingHysteresis.IncrementLowerHysteresisDesc>Increment the lower bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.IncrementLowerHysteresisDesc>
 
-  <FarmingHysteresis.UseGlobalBounds>Use global bounds for {0}: {1}</FarmingHysteresis.UseGlobalBounds>
-  <FarmingHysteresis.LowerBound>Start planting {0} when there are fewer than {1} {2} in storage</FarmingHysteresis.LowerBound>
-  <FarmingHysteresis.UpperBound>Stop planting {0} when there are more than {1} {2} in storage</FarmingHysteresis.UpperBound>
-  <FarmingHysteresis.InStorage>Current amount of {0} in storage: {1}</FarmingHysteresis.InStorage>
+    <FarmingHysteresis.DecrementUpperHysteresis>U: -{0}</FarmingHysteresis.DecrementUpperHysteresis>
+    <FarmingHysteresis.DecrementUpperHysteresisDesc>Decrement the upper bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.DecrementUpperHysteresisDesc>
+    <FarmingHysteresis.IncrementUpperHysteresis>U: +{0}</FarmingHysteresis.IncrementUpperHysteresis>
+    <FarmingHysteresis.IncrementUpperHysteresisDesc>Increment the upper bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.IncrementUpperHysteresisDesc>
 
-  <FarmingHysteresis.LatchModeDesc>Current state: {0}</FarmingHysteresis.LatchModeDesc>
-  <FarmingHysteresis.LatchModeDesc.Unknown>Unknown. This is a bug unless the zone was just
-    created or hysteresis was just enabled.</FarmingHysteresis.LatchModeDesc.Unknown>
-  <FarmingHysteresis.LatchModeDesc.BelowLowerBound>Lower than the lower bound. Sowing enabled.</FarmingHysteresis.LatchModeDesc.BelowLowerBound>
-  <FarmingHysteresis.LatchModeDesc.BetweenBoundsEnabled>Higher than the lower bound, but has not reached the upper bound. Sowing still enabled.</FarmingHysteresis.LatchModeDesc.BetweenBoundsEnabled>
-  <FarmingHysteresis.LatchModeDesc.BetweenBoundsDisabled>Lower than the upper bound, but has not reached the lower bound. Sowing still disabled.</FarmingHysteresis.LatchModeDesc.BetweenBoundsDisabled>
-  <FarmingHysteresis.LatchModeDesc.AboveUpperBound>Higher than the upper bound. Sowing disabled.</FarmingHysteresis.LatchModeDesc.AboveUpperBound>
-  <FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>Farming hysteresis is disabled for this growing zone due to the selected plant not having a harvestable product.</FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>
+    <FarmingHysteresis.UseGlobalBounds>Use global bounds for {0}: {1}</FarmingHysteresis.UseGlobalBounds>
+    <FarmingHysteresis.LowerBound>Start planting {0} when there are fewer than {1} {2} in storage</FarmingHysteresis.LowerBound>
+    <FarmingHysteresis.UpperBound>Stop planting {0} when there are more than {1} {2} in storage</FarmingHysteresis.UpperBound>
+    <FarmingHysteresis.InStorage>Current amount of {0} in storage: {1}</FarmingHysteresis.InStorage>
 
-  <FarmingHysteresis.LowerBoundLabel>Lower bound</FarmingHysteresis.LowerBoundLabel>
-  <FarmingHysteresis.UpperBoundLabel>Upper bound</FarmingHysteresis.UpperBoundLabel>
+    <FarmingHysteresis.LatchModeDesc>Current state: {0}</FarmingHysteresis.LatchModeDesc>
+    <FarmingHysteresis.LatchModeDesc.Unknown>Unknown. This is a bug unless the zone was just created or hysteresis was just enabled.</FarmingHysteresis.LatchModeDesc.Unknown>
+    <FarmingHysteresis.LatchModeDesc.BelowLowerBound>Lower than the lower bound. Allowing {0}.</FarmingHysteresis.LatchModeDesc.BelowLowerBound>
+    <FarmingHysteresis.LatchModeDesc.BetweenBoundsEnabled>Higher than the lower bound, but has not reached the upper bound. Still allowing {0}.</FarmingHysteresis.LatchModeDesc.BetweenBoundsEnabled>
+    <FarmingHysteresis.LatchModeDesc.BetweenBoundsDisabled>Lower than the upper bound, but has not reached the lower bound. Still disallowing {0}.</FarmingHysteresis.LatchModeDesc.BetweenBoundsDisabled>
+    <FarmingHysteresis.LatchModeDesc.AboveUpperBound>Higher than the upper bound. Disallowing {0}.</FarmingHysteresis.LatchModeDesc.AboveUpperBound>
+    <FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>Farming hysteresis is disabled for this growing zone due to the selected plant not having a harvestable product.</FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>
 
-  <FarmingHysteresis.GlobalHysteresisBounds>Global Hysteresis Bounds</FarmingHysteresis.GlobalHysteresisBounds>
+    <FarmingHysteresis.LowerBoundLabel>Lower bound</FarmingHysteresis.LowerBoundLabel>
+    <FarmingHysteresis.UpperBoundLabel>Upper bound</FarmingHysteresis.UpperBoundLabel>
+
+    <FarmingHysteresis.GlobalHysteresisBounds>Global Hysteresis Bounds</FarmingHysteresis.GlobalHysteresisBounds>
+
+    <FarmingHysteresis.Sowing>sowing</FarmingHysteresis.Sowing>
+    <FarmingHysteresis.Harvesting>harvesting</FarmingHysteresis.Harvesting>
+    <FarmingHysteresis.SowingAndHarvesting>sowing and harvesting</FarmingHysteresis.SowingAndHarvesting>
+    <FarmingHysteresis.Control>Control {0}</FarmingHysteresis.Control>
 </LanguageData>
