--- a/1.4/Languages/Norwegian/Keyed/FarmingHysteresis.xml
+++ b/1.4/Languages/Norwegian/Keyed/FarmingHysteresis.xml
@@ -2,33 +2,26 @@
 
 <LanguageData>
     <FarmingHysteresis.EnableFarmingHysteresis>Aktiver jordbrukshysterese</FarmingHysteresis.EnableFarmingHysteresis>
-    <FarmingHysteresis.EnableFarmingHysteresisisDesc>Så planter så lenge mengden innhøstingsprodukt
-        blir lavere enn den konfigurerte nedre hysteresegrensa, og avslutt såing i det mengden
-        blir
-        høyere enn den konfigurerte øvre hysteresegrensa.</FarmingHysteresis.EnableFarmingHysteresisisDesc>
+    <FarmingHysteresis.EnableFarmingHysteresisisDesc>Tillat {0} av planter så lenge mengden innhøstingsprodukt er lavere enn den konfigurerte nedre hysteresegrensa og forby {0} i det mengden blir høyere enn den konfigurerte øvre hysteresegrensa.</FarmingHysteresis.EnableFarmingHysteresisisDesc>
 
     <FarmingHysteresis.UseGlobalValues>Bruk globale hysteresegrenser</FarmingHysteresis.UseGlobalValues>
-    <FarmingHysteresis.UseGlobalValuesDesc>Alle soner og hydroponiske bed med samme innhøstingsprodukt som har denne
-        innstillingen på vil dele grenseverdier.</FarmingHysteresis.UseGlobalValuesDesc>
+    <FarmingHysteresis.UseGlobalValuesDesc>Alle soner og hydroponiske bed med samme innhøstingsprodukt som har denne innstillingen på vil dele grenseverdier.</FarmingHysteresis.UseGlobalValuesDesc>
 
     <FarmingHysteresis.DefaultLowerBound>Standard nedre grensenivå</FarmingHysteresis.DefaultLowerBound>
     <FarmingHysteresis.DefaultUpperBound>Standard øvre grensenivå</FarmingHysteresis.DefaultUpperBound>
     <FarmingHysteresis.EnabledByDefault>Jordbrukssoner og hydroponiske bed har hysterese aktivert når de blir plassert</FarmingHysteresis.EnabledByDefault>
     <FarmingHysteresis.UseGlobalValuesByDefault>Bruk globale hysteresegrenser som standard</FarmingHysteresis.UseGlobalValuesByDefault>
+    <FarmingHysteresis.HysteresisMode>Hysteresemodus</FarmingHysteresis.HysteresisMode>
 
     <FarmingHysteresis.DecrementLowerHysteresis>N: -{0}</FarmingHysteresis.DecrementLowerHysteresis>
-    <FarmingHysteresis.DecrementLowerHysteresisDesc>Reduser den nedre grensa med {0} (Hold {1} for
-        x10, {2} for x100)</FarmingHysteresis.DecrementLowerHysteresisDesc>
+    <FarmingHysteresis.DecrementLowerHysteresisDesc>Reduser den nedre grensa med {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.DecrementLowerHysteresisDesc>
     <FarmingHysteresis.IncrementLowerHysteresis>N: +{0}</FarmingHysteresis.IncrementLowerHysteresis>
-    <FarmingHysteresis.IncrementLowerHysteresisDesc>Øk den nedre grensa med {0} (Hold {1} for
-        x10, {2} for x100)</FarmingHysteresis.IncrementLowerHysteresisDesc>
+    <FarmingHysteresis.IncrementLowerHysteresisDesc>Øk den nedre grensa med {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.IncrementLowerHysteresisDesc>
 
     <FarmingHysteresis.DecrementUpperHysteresis>Ø: -{0}</FarmingHysteresis.DecrementUpperHysteresis>
-    <FarmingHysteresis.DecrementUpperHysteresisDesc>Reduser den øvre grensa med {0} (Hold {1} for
-        x10, {2} for x100)</FarmingHysteresis.DecrementUpperHysteresisDesc>
+    <FarmingHysteresis.DecrementUpperHysteresisDesc>Reduser den øvre grensa med {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.DecrementUpperHysteresisDesc>
     <FarmingHysteresis.IncrementUpperHysteresis>Ø: +{0}</FarmingHysteresis.IncrementUpperHysteresis>
-    <FarmingHysteresis.IncrementUpperHysteresisDesc>Øk den nedre grensa med {0} (Hold {1} for
-        x10, {2} for x100)</FarmingHysteresis.IncrementUpperHysteresisDesc>
+    <FarmingHysteresis.IncrementUpperHysteresisDesc>Øk den nedre grensa med {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.IncrementUpperHysteresisDesc>
 
     <FarmingHysteresis.UseGlobalBounds>Bruk globale grenser for {0}: {1}</FarmingHysteresis.UseGlobalBounds>
     <FarmingHysteresis.LowerBound>Start såing av {0} dersom det er færre enn {1} {2} på lager</FarmingHysteresis.LowerBound>
@@ -36,19 +29,20 @@
     <FarmingHysteresis.InStorage>Nåværende mengde {0} på lager: {1}</FarmingHysteresis.InStorage>
 
     <FarmingHysteresis.LatchModeDesc>Nåværende tilstand: {0}</FarmingHysteresis.LatchModeDesc>
-    <FarmingHysteresis.LatchModeDesc.Unknown>Ukjent. Dette er en feiltilstand med mindre sonen
-        nettopp ble opprettet eller hysterese nettopp ble aktivert.</FarmingHysteresis.LatchModeDesc.Unknown>
-    <FarmingHysteresis.LatchModeDesc.BelowLowerBound>Lavere enn den nedre grensa. Såing aktivert.</FarmingHysteresis.LatchModeDesc.BelowLowerBound>
-    <FarmingHysteresis.LatchModeDesc.BetweenBoundsEnabled>Høyere enn den nedre grensa, men har ikke
-        nådd den øvre grensa. Såing forblir aktivert.</FarmingHysteresis.LatchModeDesc.BetweenBoundsEnabled>
-    <FarmingHysteresis.LatchModeDesc.BetweenBoundsDisabled>Lavere enn den øvre grensa, men har ikke
-        nådd den nedre grensa. Såing forblir deaktivert.</FarmingHysteresis.LatchModeDesc.BetweenBoundsDisabled>
-    <FarmingHysteresis.LatchModeDesc.AboveUpperBound>Høyere enn den øvre grensa. Såing deaktivert.</FarmingHysteresis.LatchModeDesc.AboveUpperBound>
-    <FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>Jordbrukshysterese er deaktivert for
-        denne jordbrukssonen da den valgte planten ikke har et produkt som kan høstes.</FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>
+    <FarmingHysteresis.LatchModeDesc.Unknown>Ukjent. Dette er en feiltilstand med mindre sonen nettopp ble opprettet eller hysterese nettopp ble aktivert.</FarmingHysteresis.LatchModeDesc.Unknown>
+    <FarmingHysteresis.LatchModeDesc.BelowLowerBound>Lavere enn den nedre grensa. Aktiverer {0}.</FarmingHysteresis.LatchModeDesc.BelowLowerBound>
+    <FarmingHysteresis.LatchModeDesc.BetweenBoundsEnabled>Høyere enn den nedre grensa, men har ikke nådd den øvre grensa. Fortsetter å la {0} være aktivert.</FarmingHysteresis.LatchModeDesc.BetweenBoundsEnabled>
+    <FarmingHysteresis.LatchModeDesc.BetweenBoundsDisabled>Lavere enn den øvre grensa, men har ikke nådd den nedre grensa. Fortsetter å la {0} være deaktivert.</FarmingHysteresis.LatchModeDesc.BetweenBoundsDisabled>
+    <FarmingHysteresis.LatchModeDesc.AboveUpperBound>Høyere enn den øvre grensa. Deaktiverer {0}.</FarmingHysteresis.LatchModeDesc.AboveUpperBound>
+    <FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>Jordbrukshysterese er deaktivert for denne jordbrukssonen da den valgte planten ikke har et produkt som kan høstes.</FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>
 
     <FarmingHysteresis.LowerBoundLabel>Nedre grense</FarmingHysteresis.LowerBoundLabel>
     <FarmingHysteresis.UpperBoundLabel>Øvre grense</FarmingHysteresis.UpperBoundLabel>
 
     <FarmingHysteresis.GlobalHysteresisBounds>Globale hysteresegrenser</FarmingHysteresis.GlobalHysteresisBounds>
+
+    <FarmingHysteresis.Sowing>såing</FarmingHysteresis.Sowing>
+    <FarmingHysteresis.Harvesting>innhøsting</FarmingHysteresis.Harvesting>
+    <FarmingHysteresis.SowingAndHarvesting>såing og innhøsting</FarmingHysteresis.SowingAndHarvesting>
+    <FarmingHysteresis.Control>Styr {0}</FarmingHysteresis.Control>
 </LanguageData>
