--- a/1.4/Languages/Japanese/Keyed/FarmingHysteresis.xml
+++ b/1.4/Languages/Japanese/Keyed/FarmingHysteresis.xml
@@ -1,33 +1,54 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <LanguageData>
-  <FarmingHysteresis.EnableFarmingHysteresis>在庫対応有効</FarmingHysteresis.EnableFarmingHysteresis>
-  <FarmingHysteresis.EnableFarmingHysteresisisDesc>設定された下限値を在庫が下回った場合に種蒔きを開始して,設定された上限値を在庫が超えた場合に種蒔きを停止します.</FarmingHysteresis.EnableFarmingHysteresisisDesc>
+  <FarmingHysteresis.EnableFarmingHysteresis>Enable farming hysteresis</FarmingHysteresis.EnableFarmingHysteresis>
+  <FarmingHysteresis.EnableFarmingHysteresisisDesc>Allow {0} when the amount gets lower than the configured lower amount and disallow {0} when it gets above the configured upper amount.</FarmingHysteresis.EnableFarmingHysteresisisDesc>
 
-  <FarmingHysteresis.UseGlobalValues>同種在庫 全域対応</FarmingHysteresis.UseGlobalValues>
-  <FarmingHysteresis.UseGlobalValuesDesc>この設定が有効になっている同じ作物に指定されているすべての栽培ゾーンで,同じ境界値(下限値/上限値)が共有されます.</FarmingHysteresis.UseGlobalValuesDesc>
+  <FarmingHysteresis.UseGlobalValues>Use global hysteresis values</FarmingHysteresis.UseGlobalValues>
+  <FarmingHysteresis.UseGlobalValuesDesc>For all zones and hydroponics basins of the same crop with this setting enabled, they will share the same bound values.</FarmingHysteresis.UseGlobalValuesDesc>
 
-  <FarmingHysteresis.DecrementLowerHysteresis>下限：-{0}</FarmingHysteresis.DecrementLowerHysteresis>
-  <FarmingHysteresis.DecrementLowerHysteresisDesc>下限値を{0}下げます.\n{1}キーを押すと+10,\n{2}キーを押すと+100に変更,\n{1}と{2}を同時に押すと+1000に変更</FarmingHysteresis.DecrementLowerHysteresisDesc>
-  <FarmingHysteresis.IncrementLowerHysteresis>下限：+{0}</FarmingHysteresis.IncrementLowerHysteresis>
-  <FarmingHysteresis.IncrementLowerHysteresisDesc>下限値を{0}上げます.\n{1}キーを押すと+10,\n{2}キーを押すと+100に変更,\n{1}と{2}を同時に押すと+1000に変更</FarmingHysteresis.IncrementLowerHysteresisDesc>
+  <FarmingHysteresis.DefaultLowerBound>Default lower bound</FarmingHysteresis.DefaultLowerBound>
+  <FarmingHysteresis.DefaultUpperBound>Default upper bound</FarmingHysteresis.DefaultUpperBound>
+  <FarmingHysteresis.EnabledByDefault>Growing zones and hydroponic basins enable hysteresis upon placement</FarmingHysteresis.EnabledByDefault>
+  <FarmingHysteresis.UseGlobalValuesByDefault>Use global hysteresis values by default</FarmingHysteresis.UseGlobalValuesByDefault>
+  <FarmingHysteresis.HysteresisMode>Hysteresis mode</FarmingHysteresis.HysteresisMode>
+  <FarmingHysteresis.ShowOldCommands>Show old command buttons</FarmingHysteresis.ShowOldCommands>
+  <FarmingHysteresis.ShowOldCommandsTooltip>In version 0.6, the mod switched from using command buttons to a dialog for configuring hysteresis parameters. Enable this setting to also show the old command buttons.</FarmingHysteresis.ShowOldCommandsTooltip>
 
-  <FarmingHysteresis.DecrementUpperHysteresis>上限：-{0}</FarmingHysteresis.DecrementUpperHysteresis>
-  <FarmingHysteresis.DecrementUpperHysteresisDesc>上限値を{0}下げます.\n{1}キーを押すと+10,\n{2}キーを押すと+100に変更,\n{1}と{2}を同時に押すと+1000に変更</FarmingHysteresis.DecrementUpperHysteresisDesc>
-  <FarmingHysteresis.IncrementUpperHysteresis>上限：+{0}</FarmingHysteresis.IncrementUpperHysteresis>
-  <FarmingHysteresis.IncrementUpperHysteresisDesc>上限値を{0}上げます.\n{1}キーを押すと+10,\n{2}キーを押すと+100に変更,\n{1}と{2}を同時に押すと+1000に変更</FarmingHysteresis.IncrementUpperHysteresisDesc>
+  <FarmingHysteresis.ConfigureHysteresis>Configure hysteresis parameters</FarmingHysteresis.ConfigureHysteresis>
+  <FarmingHysteresis.ConfigureHysteresisDesc>Configure hysteresis parameters such as the upper and lower bounds.</FarmingHysteresis.ConfigureHysteresisDesc>
 
-  <FarmingHysteresis.UseGlobalBounds>{0}に全域在庫対応を使用：{1}</FarmingHysteresis.UseGlobalBounds>
-  <FarmingHysteresis.LowerBound>下限:{2}が{1}未満の場合,\n　　 {0}の種蒔きを開始</FarmingHysteresis.LowerBound>
-  <FarmingHysteresis.UpperBound>上限:{2}が{1}以上の場合,\n　　 {0}の種蒔きを停止</FarmingHysteresis.UpperBound>
-  <FarmingHysteresis.InStorage>{0}の在庫量：現在 {1}</FarmingHysteresis.InStorage>
+  <FarmingHysteresis.DecrementLowerHysteresis>L: -{0}</FarmingHysteresis.DecrementLowerHysteresis>
+  <FarmingHysteresis.DecrementLowerHysteresisDesc>Decrement the lower bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.DecrementLowerHysteresisDesc>
+  <FarmingHysteresis.IncrementLowerHysteresis>L: +{0}</FarmingHysteresis.IncrementLowerHysteresis>
+  <FarmingHysteresis.IncrementLowerHysteresisDesc>Increment the lower bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.IncrementLowerHysteresisDesc>
 
-  <FarmingHysteresis.LatchModeDesc>現状:{0}</FarmingHysteresis.LatchModeDesc>
-  <FarmingHysteresis.LatchModeDesc.Unknown>不明.これはバグです.</FarmingHysteresis.LatchModeDesc.Unknown>
-  <FarmingHysteresis.LatchModeDesc.BelowLowerBound>在庫が下限未満.種蒔き可能</FarmingHysteresis.LatchModeDesc.BelowLowerBound>
-  <FarmingHysteresis.LatchModeDesc.BetweenBoundsEnabled>在庫が下限以上になり,上限未満.種蒔き可能</FarmingHysteresis.LatchModeDesc.BetweenBoundsEnabled>
-  <FarmingHysteresis.LatchModeDesc.BetweenBoundsDisabled>在庫が上限以上になった為,現在の在庫が\n　　 下限未満になるまで消費されるまで,種蒔き不可</FarmingHysteresis.LatchModeDesc.BetweenBoundsDisabled>
-  <FarmingHysteresis.LatchModeDesc.AboveUpperBound>在庫が上限以上になり.種蒔き不可</FarmingHysteresis.LatchModeDesc.AboveUpperBound>
-  <FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>選択した植物に収穫可能な作物が存在しないので,この栽培ゾーンでは在庫対応が無効になっています</FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>
+  <FarmingHysteresis.DecrementUpperHysteresis>U: -{0}</FarmingHysteresis.DecrementUpperHysteresis>
+  <FarmingHysteresis.DecrementUpperHysteresisDesc>Decrement the upper bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.DecrementUpperHysteresisDesc>
+  <FarmingHysteresis.IncrementUpperHysteresis>U: +{0}</FarmingHysteresis.IncrementUpperHysteresis>
+  <FarmingHysteresis.IncrementUpperHysteresisDesc>Increment the upper bound by {0} (Hold {1} for x10, {2} for x100)</FarmingHysteresis.IncrementUpperHysteresisDesc>
 
+  <FarmingHysteresis.UseGlobalBounds>Use global bounds for {0}: {1}</FarmingHysteresis.UseGlobalBounds>
+  <FarmingHysteresis.LowerBound>Start planting {0} when there are fewer than {1} {2} in storage</FarmingHysteresis.LowerBound>
+  <FarmingHysteresis.UpperBound>Stop planting {0} when there are more than {1} {2} in storage</FarmingHysteresis.UpperBound>
+  <FarmingHysteresis.InStorage>Current amount of {0} in storage: {1}</FarmingHysteresis.InStorage>
+
+  <FarmingHysteresis.LatchModeDesc>Current state: {0}</FarmingHysteresis.LatchModeDesc>
+  <FarmingHysteresis.LatchModeDesc.Unknown>Unknown. This is a bug unless the zone was just created or hysteresis was just enabled.</FarmingHysteresis.LatchModeDesc.Unknown>
+  <FarmingHysteresis.LatchModeDesc.BelowLowerBound>Lower than the lower bound. Allowing {0}.</FarmingHysteresis.LatchModeDesc.BelowLowerBound>
+  <FarmingHysteresis.LatchModeDesc.BetweenBoundsEnabled>Higher than the lower bound, but has not reached the upper bound. Still allowing {0}.</FarmingHysteresis.LatchModeDesc.BetweenBoundsEnabled>
+  <FarmingHysteresis.LatchModeDesc.BetweenBoundsDisabled>Lower than the upper bound, but has not reached the lower bound. Still disallowing {0}.</FarmingHysteresis.LatchModeDesc.BetweenBoundsDisabled>
+  <FarmingHysteresis.LatchModeDesc.AboveUpperBound>Higher than the upper bound. Disallowing {0}.</FarmingHysteresis.LatchModeDesc.AboveUpperBound>
+  <FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>Farming hysteresis is disabled for this growing zone due to the selected plant not having a harvestable product.</FarmingHysteresis.DisabledDueToMissingHarvestedThingDef>
+
+  <FarmingHysteresis.UseGlobalBoundsLabel>Use global bounds</FarmingHysteresis.UseGlobalBoundsLabel>
+  <FarmingHysteresis.LowerBoundLabel>Lower bound</FarmingHysteresis.LowerBoundLabel>
+  <FarmingHysteresis.UpperBoundLabel>Upper bound</FarmingHysteresis.UpperBoundLabel>
+
+  <FarmingHysteresis.GlobalHysteresisBounds>Global Hysteresis Bounds</FarmingHysteresis.GlobalHysteresisBounds>
+
+  <FarmingHysteresis.Sowing>sowing</FarmingHysteresis.Sowing>
+  <FarmingHysteresis.Harvesting>harvesting</FarmingHysteresis.Harvesting>
+  <FarmingHysteresis.SowingAndHarvesting>sowing and harvesting</FarmingHysteresis.SowingAndHarvesting>
+  <FarmingHysteresis.Control>Control {0}</FarmingHysteresis.Control>
 </LanguageData>
