--- a/Common/Languages/Norwegian/Keyed/FarmingHysteresis.xml
+++ b/Common/Languages/Norwegian/Keyed/FarmingHysteresis.xml
@@ -11,6 +11,9 @@
     <FarmingHysteresis.DefaultUpperBound>Standard øvre grensenivå</FarmingHysteresis.DefaultUpperBound>
     <FarmingHysteresis.EnabledByDefault>Jordbrukssoner og hydroponiske bed har hysterese aktivert når de blir plassert</FarmingHysteresis.EnabledByDefault>
     <FarmingHysteresis.UseGlobalValuesByDefault>Bruk globale hysteresegrenser som standard</FarmingHysteresis.UseGlobalValuesByDefault>
+    <FarmingHysteresis.CountAllOnMap>Tell alle innhøstbare produkter på banen</FarmingHysteresis.CountAllOnMap>
+    <FarmingHysteresis.CountAllOnMapTooltip>Hvis dette valget er skrudd på telles alle produkter på banen når hysteresestatus skal avgjøres. Hvis det er skrudd av telles kun produkter som befinner seg i lagringsområder og -bygninger.</FarmingHysteresis.CountAllOnMapTooltip>
+    <FarmingHysteresis.Expensive.Tooltip>Å skru på dette valget kan ha en negativ effekt på ytelsen, spesielt på store baner eller baner med mange gjenstander.</FarmingHysteresis.Expensive.Tooltip>
     <FarmingHysteresis.HysteresisMode>Hysteresemodus</FarmingHysteresis.HysteresisMode>
     <FarmingHysteresis.ShowOldCommands>Vis gamle kommandoknapper</FarmingHysteresis.ShowOldCommands>
     <FarmingHysteresis.ShowOldCommandsTooltip>I versjon 0.6 gikk moden fra å bruke kommandoknapper til å bruke en dialog for å stille inn hystereseparametere. Skru på dette valget for å også vise de gamle kommandoknappene.</FarmingHysteresis.ShowOldCommandsTooltip>
